<resources>
    <string name="app_name">RFMCafe</string>
    <string name="title">RFM Cafe</string>
    <string name="prompt_coffee">How would you like your coffee ?</string>
    <string name="dark_roast">Dark Roast</string>
    <string name="original_blend">Original Blend</string>
    <string name="french_vanilla">French Vanilla</string>
    <string name="iced_capp">Iced Capp</string>
    <string name="cream">Cream</string>
    <string name="sugar">Sugar</string>
    <string name="prompt_addon">Please select your add-on</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="dom_lid">Dom lid</string>
    <string name="sleeve">Sleeve</string>
    <string name="espresso_shot">Espresso shot</string>
    <string name="prompt_name">Please enter your name</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
</resources>
